Fix regression: 3D objects are not shown correctly

The current draw occlusion cannot handle 3d object yet. This patch allows
DrawOcclusion to skip draw quads from a 3D objects.

Bug: 833748
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I08d12c794d4acff0e1f584f4c74857bc5df83fee
Reviewed-on: https://chromium-review.googlesource.com/1044781
Commit-Queue: Yi Xu <yiyix@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556323}
Former-commit-id: 7a297c386d902914c424f0a75f74478eb44b1186